# vkBasalt-gui

./: CMakeLists.txt  README.md  bottommenubar.cpp  bottommenubar.h  bottommenubar.ui  casconfig.cpp  casconfig.h  casconfig.ui  dlsconfig.cpp  dlsconfig.h  dlsconfig.ui  fxaaconfig.cpp  fxaaconfig.h  fxaaconfig.ui  game.cpp  game.h  gameproviders.h  gamesdropdownwidget.cpp  gamesdropdownwidget.h  gamesdropdownwidget.ui  gamesmanager.cpp  gamesmanager.h  lutconfig.cpp  lutconfig.h  lutconfig.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reshadefilters.cpp  reshadefilters.h  reshadefilters.ui  settingswidget.cpp  settingswidget.h  smaaconfig.cpp  smaaconfig.h  smaaconfig.ui  steamgamesmanager.cpp  steamgamesmanager.h  vkbasalteffects.cpp  (+2 more)
